fix overflow in liquid-fire containers

--- a/addon/styles/@queertangocollective/ui.scss
+++ b/addon/styles/@queertangocollective/ui.scss
@@ -49,3 +49,10 @@ html {
 .datetime-field {
   @extend .date-field;
 }
+
+.liquid-container:not(.liquid-animating) {
+  &,
+  .liquid-child {
+    overflow: visible;
+  }
+}
